selfhost/test/typechecker/unary_error_negate_2.out
Error at %FILE_NAME%:1:2
Type mismatch
  |  !123
      ^
Expected: Bool
but instead found: Int
